# gohan-layer

./: README.md  package.json  pnpm-lock.yaml
apps/circuits/: README.md
apps/circuits/program/: Cargo.toml
apps/circuits/program/elf/: riscv32im-succinct-zkvm-elf
apps/circuits/program/src/: main.rs
apps/circuits/script/: Cargo.toml  proof-with-pis.json
apps/circuits/script/src/: main.rs
apps/web/: index.html  package.json
apps/web/src/: App.tsx  main.tsx
apps/web/src/assets/: index.ts
apps/web/src/components/: Collateral.tsx  Footer.tsx  Hero.tsx  MineToken.tsx  Miner.tsx  MinerRegister.tsx  MintButton.tsx  MintGood.tsx  Navbar.tsx  index.ts
apps/web/src/constants/: index.ts
apps/web/src/routes/: launch.tsx  lend.tsx  staker.tsx
apps/web/src/routes/components/: Navbar.tsx
apps/web/src/services/: contractAbi.ts
apps/web/src/utils/: chains.ts
