[workspace]
[package]
version = "0.1.0"
name = "ssz-withdrawals-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
avail-subxt = { git= "https://github.com/availproject/avail.git"}
unicode-normalization = "0.1.22"
anyhow = "1.0.82"
futures = "0.3.30"
sp-keyring = "36.0.0"
subxt = "0.35.3"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }
