[workspace]
[package]
version = "0.1.0"
name = "ssz-withdrawals-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
sp1-recursion-gnark-ffi = { git = "https://github.com/succinctlabs/sp1.git" }
avail-subxt = { git= "https://github.com/availproject/avail.git"}
unicode-normalization = "0.1.22"
anyhow = "1.0.82"
futures = "0.3.30"
sp-keyring = "36.0.0"
tokio = "1.37.0"
reqwest = "0.12.4"
serde = "1.0.200"
serde_json = "1.0.116"
base64 = "0.22.1"
file = "1.1.2"
tempfile = "3.10.1"
flate2 = "1.0.30"
brotli = "5.0.0"
ethers = "2.0.14"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }
